# mtv-tv-leptos

./: BUILD.sh  Cargo.toml  Dockerfile  index.html
arm32/: Dockerfile
arm64/: Dockerfile
src/: main.rs  searchpage.rs  tvshowspage.rs
src/seasonpages/: tvmoblandseapage.rs
src/tvpages/: tvactionpage.rs  tvcomedypage.rs  tvfantasypage.rs  tvmcupage.rs  tvsciencepage.rs  tvscifipage.rs  tvstartrekpage.rs  tvstarwarspage.rs  tvwesternspage.rs
